Bug fix jumping background - turned all css-background-images to img-tags & minor refact boardWrapper (#26)
* Turn Board background-image to img-tag instead of css-background

* Turn locks to img-tag instead of css-background-image && rename state that handles toggle between locked & unlocked.

* Add classname to enemy-paths-wrapper for clearity in inspector

* Move Home into article in boardWrapper with corresponding className

--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -4,10 +4,11 @@
   grid-area: board;
 
   @include bg-image-layout;
-  background-image: url(../../assets/Board.svg);
   position: relative;
 }
 
-.home {
+.home,
+.backgroundImageWrapper,
+.backgroundImage {
   @include bg-image-layout;
 }
