--- a/src/components/Board/Layers/Layers.module.scss
+++ b/src/components/Board/Layers/Layers.module.scss
@@ -1,15 +1,8 @@
 @import '../../../scss/utils';
 
-.locks {
+.locks,
+.locksImg {
   @include bg-image-layout;
-
-  &.locked {
-    background-image: url(../../../assets/Locked.svg);
-  }
-
-  &.unlocked {
-    background-image: url(../../../assets/Unlocked.svg);
-  }
 }
 
 .toggleWrapper {
